--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
+    "stripe": "^16.5.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
@@ -70,7 +71,7 @@
     "typescript": "^5"
   },
   "overrides": {
-    "glob": "^10.3.10",
-    "rimraf": "^5.0.5"
+    "glob": "10.3.10",
+    "rimraf": "5.0.5"
   }
 }
