--- a/firebase.json
+++ b/firebase.json
@@ -5,6 +5,7 @@
     "indexes": "firestore.indexes.json"
   },
   "storage": {
-    "rules": "storage.rules"
+    "rules": "storage.rules",
+    "cors": "storage.cors.json"
   }
 }
