GET https://firestore.googleapis.com/google.firestore.v1.Firestore/Liste

--- a/firebase.json
+++ b/firebase.json
@@ -5,7 +5,6 @@
     "indexes": "firestore.indexes.json"
   },
   "storage": {
-    "rules": "storage.rules",
-    "cors": "storage.cors.json"
+    "rules": "storage.rules"
   }
 }
