--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "framer-motion": "^11.2.12",
     "genkit": "^1.13.0",
     "lucide-react": "^0.475.0",
-    "next": "15.3.3",
+    "next": "^15.3.5",
     "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
@@ -66,6 +66,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/next": "^9.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
