--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "test:integrity": "tsx scripts/test-integrity.ts"
   },
   "dependencies": {
-    "@genkit-ai/googleai": "^1.13.0",
-    "@genkit-ai/next": "^1.13.0",
+    "@genkit-ai/googleai": "1.13.0",
+    "@genkit-ai/next": "1.13.0",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -48,15 +48,15 @@
     "firebase": "^11.9.1",
     "firebase-admin": "^12.2.0",
     "framer-motion": "^11.2.12",
-    "genkit": "^1.13.0",
+    "genkit": "1.13.0",
     "lucide-react": "^0.475.0",
-    "next": "^14.2.4",
+    "next": "15.0.0-rc.0",
     "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
-    "react": "^18.2.0",
+    "react": "19.0.0-rc-f994737d14-20240522",
     "react-countup": "^6.5.3",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "19.0.0-rc-f994737d14-20240522",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "stripe": "^16.5.0",
@@ -71,7 +71,7 @@
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.8",
     "firebase-tools": "^13.13.2",
-    "genkit-cli": "^1.13.0",
+    "genkit-cli": "1.13.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.16.2",
